<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Password Store</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_password">Edit Entry</string>
    <string name="name">Name:</string>
    <string name="username">UserName:</string>
    <string name="password">Password:</string>
    <string name="website">Website:</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add Entry</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="login">Login</string>
    <string name="toggleShowHidePass">Toggle show/hide password</string>
    <string name="title_activity_login">Login</string>
   

</resources>
